--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,12 @@ body {
   background-color: azure;
 }
 
+.links {
+  font-size: 20px;
+  color: #666;
+  padding: 20px;
+}
+
 svg {
   overflow: visible;
 }
@@ -38,3 +44,8 @@ h1 {
   display: none;
 }
     
+a:link {
+  font-size: 16px;
+  color: black;
+  padding: 10px 5px; 
+}
